# django_csv_analysis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  commands.txt  compose.override.dev.yaml  compose.yaml  django_csv_analysis.nginx.conf  manage.py  nginx.conf  pyproject.toml  requirements.txt
core/: forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_uploadrecord.py
core/static/core/css/: bootstrap.min.css  bootstrap.rtl.min.css  dashboard.css  styles.css
core/static/core/js/: bootstrap.bundle.min.js  create_report.js  graph_navigation.js  graphs.js  scripts.js  upload.js
core/tools/: matplotlib_graphs.py  products.csv  statistics.py  stats.py  ydata_stats.py
django_csv_analysis/: .dockerignore  .gitignore  asgi.py  settings.py  urls.py  wsgi.py
templates/core/: base.html  history.html  index.html  login.html  register.html
